update code from starter template

--- a/src/App.css
+++ b/src/App.css
@@ -189,6 +189,8 @@ button:active {
 .book-cover {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   background: #eee;
+  width: 130px;
+  height: 189px;
 }
 
 .book-cover-title {
@@ -196,3 +198,4 @@ button:active {
   text-align: center;
   font-size: 0.8em;
 }
+
